--- a/_sass/shop.scss
+++ b/_sass/shop.scss
@@ -37,6 +37,10 @@
 
 }
 
+.product-price {
+  color: #eab9aa;
+}
+
 // Shop
 
 .text-animation .mini-card img {
